Fixed submit button on contact page. Wrong color.

--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ div{
 .btn{
     background-color: blueviolet;
     text-align: left;
+    color: white;
     left: 25px;
     }
 
